    - Refreshed other patches
  * d/control:
    - Add minimal version to elpa-transient Build-Depends.
    - Keep only necessary Build-Depends.
  * Remove obsolete d/*.prerm files.
  * d/copyright: Update copyright years.
  * d/rules:
    - Remove unneeded dh_clean override.
    - Remove EMACS_INHIBIT_AUTOMATIC_NATIVE_COMPILATION environment
      variable (tests run fine without it).

 -- Aymeric Agon-Rambosson <aymeric.agon@yandex.com>  Mon, 25 Dec 2023 00:54:36 +0100

magit (3.3.0-3) unstable; urgency=medium

  [ Aymeric Agon-Rambosson ]
  * Repair watch file.

  [ Xiyue Deng ]
  * Reformat Build-Depends to list one per line in alphabetic order to
    make further changes easier to track.
  * Fix `make test` failure.  Closes: #1042289.
    - Add elpa-compat to Build-Depends.
    - Cherrypick upstream patch partially to detect compat in LOAD_PATH.
  * Update Standards-Version to 4.6.2.  No change needed.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sat, 29 Jul 2023 10:24:44 +0100

magit (3.3.0-2) unstable; urgency=medium

  [ Aymeric Agon-Rambosson ]
  * Add myself, Aymeric Agon-Rambosson, to Uploaders.
  * Add repair-magit-get-and-submodule-tests.patch.
  * Add repair-git-unable-to-detect-address.patch (Autopkgtest).
  * Add Bug-Submit field to d/upstream/metadata.

  [ Sean Whitton ]
  * Team upload.
  * override_dh_elpa_test: Export EMACS_INHIBIT_AUTOMATIC_NATIVE_COMPILATION=t
    (Closes: #1020153).
    - Add build-dep on emacs-nox|emacs >= 1:28.2+1-9.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sat, 24 Dec 2022 12:23:59 -0700

magit (3.3.0-1) unstable; urgency=medium

  * New upstream version

 -- Rémi Vanicat <vanicat@debian.org>  Wed, 06 Oct 2021 14:58:32 +0200

magit (3.2.1-2) unstable; urgency=medium

  * Team upload.
  * Source-only upload for testing migration.

 -- Sean Whitton <spwhitton@spwhitton.name>  Thu, 26 Aug 2021 14:07:37 -0700

magit (3.2.1-1) unstable; urgency=medium

  [ Rémi Vanicat ]
  * New upstream version
  * Adapt watch file